feat: log OCR payment verification to optional group chat via PAYMENT_LOG_CHAT_ID; plumb through env/config and main flow
Co-authored-by: Genie <genie@cosine.sh>

--- a/.env
+++ b/.env
@@ -4,6 +4,11 @@ REDIS_URL=redis://localhost:6379/0
 # ID admin utama bot (boleh lebih dari satu, pisahkan dengan koma)
 ADMIN_IDS=7446955510
 
+# (Opsional) Chat ID grup untuk log hasil OCR pembayaran (misal grup admin).
+# Isi dengan ID grup (angka negatif, contoh: -1001234567890).
+# Jika dikosongkan atau 0, log ke grup tidak dikirim.
+PAYMENT_LOG_CHAT_ID=0
+
 TRAKTEER_API_KEY=trapi-Yt7AMoJfy9QfOkQKKQduIHuH
 
 # Untuk development, biarkan kosong supaya verifikasi signature Trakteer tidak dipakai.
